--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,3 +2,23 @@
 @tailwind components;
 @tailwind utilities;
 
+.modal-overlay {
+    position: fixed;
+    
+    top: 0;
+    left:0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5); /* Adjust the opacity as needed */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow:hidden;
+  }
+  
+  .modal-content {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 4px;
+  }
+  
