--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@
 
 .modal-overlay {
     position: fixed;
-    
+   
     top: 0;
     left:0;
     right: 0;
@@ -18,6 +18,8 @@
   
   .modal-content {
     background-color: #fff;
+    width: 50%;
+    height: 50%;
     padding: 20px;
     border-radius: 4px;
   }
