UI of Post Pop up updated

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,7 +16,7 @@
     overflow:hidden;
   }
   
-  .modal-content {
+  .modal-content-profile {
     background-color: #fff;
     width: 50%;
     height: 50%;
